[project]
name = "bnufsa"
version = "0.2.0"
description = "binance-usds-futures-spread-arbitrage"
readme = "README.md"
authors = [{ name = "Rocky Haotian Du", email = "2712479005@qq.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.4.0",
    "atask>=0.2.1",
    "binance-common",
    "binance-sdk-derivatives-trading-usds-futures",
    "dttb>=0.3.2",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pyyaml>=6.0.3",
    "sortedcontainers>=2.4.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
binance-common = { path = "../binance-connector-python/common", editable = true }
binance-sdk-derivatives-trading-usds-futures = { path = "../binance-connector-python/clients/derivatives_trading_usds_futures", editable = true }

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.12.12",
    "seaborn>=0.13.2",
    "tardis-client>=1.3.10",
    "tardis-dev>=2.1.2",
]
